--- a/pastascat_dll/pastascat_dll.vcxproj
+++ b/pastascat_dll/pastascat_dll.vcxproj
@@ -46,12 +46,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>../build/debug/</OutDir>
-    <IntDir>./obj/debug</IntDir>
+    <IntDir>./obj/debug/</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>../build/release/</OutDir>
-    <IntDir>./obj/release</IntDir>
+    <IntDir>./obj/release/</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -91,6 +91,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="globals.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
