unload dll, renamed hooks namespace to ohk (original hooked), added minhook

--- a/pastascat_dll/pastascat_dll.vcxproj.filters
+++ b/pastascat_dll/pastascat_dll.vcxproj.filters
@@ -7,6 +7,12 @@
     <Filter Include="hooks\wndproc">
       <UniqueIdentifier>{a75239eb-b424-4864-923e-70af3937eb5e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="features">
+      <UniqueIdentifier>{5b8578e3-23e9-4e3a-983c-230d8b0b2dd2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="menu">
+      <UniqueIdentifier>{6d412c85-d1e1-406b-be6a-a6eb749c5278}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="globals.h" />
