--- a/pastascat_dll/pastascat_dll.vcxproj
+++ b/pastascat_dll/pastascat_dll.vcxproj
@@ -53,6 +53,12 @@
     <OutDir>../build/release/</OutDir>
     <IntDir>./obj/release/</IntDir>
   </PropertyGroup>
+  <PropertyGroup Label="Vcpkg" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <VcpkgUseStatic>true</VcpkgUseStatic>
+  </PropertyGroup>
+  <PropertyGroup Label="Vcpkg" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <VcpkgUseStatic>true</VcpkgUseStatic>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -93,10 +99,12 @@
   <ItemGroup>
     <ClInclude Include="globals.h" />
     <ClInclude Include="hooks\hk.h" />
-    <ClInclude Include="hooks\hk_wndproc.h" />
+    <ClInclude Include="sdk\ISurface.h" />
+    <ClInclude Include="sdk\types.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="hooks\hk_painttraverse.cpp" />
     <ClCompile Include="hooks\hk_wndproc.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
