client cmd hook and custom chat command

--- a/pastascat_dll/pastascat_dll.vcxproj
+++ b/pastascat_dll/pastascat_dll.vcxproj
@@ -104,6 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="hooks\hk_clientcmd.cpp" />
     <ClCompile Include="hooks\hk_painttraverse.cpp" />
     <ClCompile Include="hooks\hk_wndproc.cpp" />
   </ItemGroup>
