--- a/pastascat_dll/pastascat_dll.vcxproj.filters
+++ b/pastascat_dll/pastascat_dll.vcxproj.filters
@@ -34,5 +34,8 @@
     <ClCompile Include="hooks\hk_painttraverse.cpp">
       <Filter>hooks</Filter>
     </ClCompile>
+    <ClCompile Include="hooks\hk_clientcmd.cpp">
+      <Filter>hooks</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
